fix lgp